@@ -1,6 +1,7 @@
 /* Target-dependent code for GNU/Linux on MIPS processors.
 
-   Copyright (C) 2001-2002, 2004-2012 Free Software Foundation, Inc.
+   Copyright (C) 2001, 2002, 2004, 2005, 2006, 2007, 2008, 2009, 2010
+   Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -35,11 +36,8 @@
 #include "solist.h"
 #include "symtab.h"
 #include "target-descriptions.h"
-#include "regset.h"
 #include "mips-linux-tdep.h"
 #include "glibc-tdep.h"
-#include "linux-tdep.h"
-#include "xml-syscall.h"
 
 static struct target_so_ops mips_svr4_so_ops;
 
@@ -128,16 +126,6 @@ mips_supply_gregset (struct regcache *regcache,
     regcache_raw_supply (regcache, regi, zerobuf);
 }
 
-static void
-mips_supply_gregset_wrapper (const struct regset *regset,
-                             struct regcache *regcache,
-		             int regnum, const void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips_elf_gregset_t));
-
-  mips_supply_gregset (regcache, (const mips_elf_gregset_t *)gregs);
-}
-
 /* Pack our registers (or one register) into an elf_gregset_t.  */
 
 void
@@ -196,16 +184,6 @@ mips_fill_gregset (const struct regcache *regcache,
     }
 }
 
-static void
-mips_fill_gregset_wrapper (const struct regset *regset,
-			   const struct regcache *regcache,
-			   int regnum, void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips_elf_gregset_t));
-
-  mips_fill_gregset (regcache, (mips_elf_gregset_t *)gregs, regnum);
-}
-
 /* Likewise, unpack an elf_fpregset_t.  */
 
 void
@@ -231,16 +209,6 @@ mips_supply_fpregset (struct regcache *regcache,
   regcache_raw_supply (regcache,
 		       mips_regnum (gdbarch)->fp_implementation_revision,
 		       zerobuf);
-}
-
-static void
-mips_supply_fpregset_wrapper (const struct regset *regset,
-                              struct regcache *regcache,
-		              int regnum, const void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips_elf_fpregset_t));
-
-  mips_supply_fpregset (regcache, (const mips_elf_fpregset_t *)gregs);
 }
 
 /* Likewise, pack one or all floating point registers into an
@@ -274,16 +242,6 @@ mips_fill_fpregset (const struct regcache *regcache,
       mips_fill_fpregset (regcache, fpregsetp,
 			  mips_regnum (gdbarch)->fp_control_status);
     }
-}
-
-static void
-mips_fill_fpregset_wrapper (const struct regset *regset,
-			    const struct regcache *regcache,
-			    int regnum, void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips_elf_fpregset_t));
-
-  mips_fill_fpregset (regcache, (mips_elf_fpregset_t *)gregs, regnum);
 }
 
 /* Support for 64-bit ABIs.  */
@@ -383,16 +341,6 @@ mips64_supply_gregset (struct regcache *regcache,
     regcache_raw_supply (regcache, regi, zerobuf);
 }
 
-static void
-mips64_supply_gregset_wrapper (const struct regset *regset,
-                               struct regcache *regcache,
-		               int regnum, const void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips64_elf_gregset_t));
-
-  mips64_supply_gregset (regcache, (const mips64_elf_gregset_t *)gregs);
-}
-
 /* Pack our registers (or one register) into a 64-bit elf_gregset_t.  */
 
 void
@@ -413,8 +361,7 @@ mips64_fill_gregset (const struct regcache *regcache,
       mips64_fill_gregset (regcache, gregsetp, mips_regnum (gdbarch)->lo);
       mips64_fill_gregset (regcache, gregsetp, mips_regnum (gdbarch)->hi);
       mips64_fill_gregset (regcache, gregsetp, mips_regnum (gdbarch)->pc);
-      mips64_fill_gregset (regcache, gregsetp,
-			   mips_regnum (gdbarch)->badvaddr);
+      mips64_fill_gregset (regcache, gregsetp, mips_regnum (gdbarch)->badvaddr);
       mips64_fill_gregset (regcache, gregsetp, MIPS_PS_REGNUM);
       mips64_fill_gregset (regcache, gregsetp,  mips_regnum (gdbarch)->cause);
       mips64_fill_gregset (regcache, gregsetp, MIPS_RESTART_REGNUM);
@@ -452,16 +399,6 @@ mips64_fill_gregset (const struct regcache *regcache,
       dst = regp + regaddr;
       store_signed_integer (dst, 8, byte_order, val);
     }
-}
-
-static void
-mips64_fill_gregset_wrapper (const struct regset *regset,
-			     const struct regcache *regcache,
-			     int regnum, void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips64_elf_gregset_t));
-
-  mips64_fill_gregset (regcache, (mips64_elf_gregset_t *)gregs, regnum);
 }
 
 /* Likewise, unpack an elf_fpregset_t.  */
@@ -502,16 +439,6 @@ mips64_supply_fpregset (struct regcache *regcache,
 		    (const gdb_byte *)(*fpregsetp + 32) + 4);
 }
 
-static void
-mips64_supply_fpregset_wrapper (const struct regset *regset,
-                                struct regcache *regcache,
-		                int regnum, const void *gregs, size_t len)
-{
-  gdb_assert (len == sizeof (mips64_elf_fpregset_t));
-
-  mips64_supply_fpregset (regcache, (const mips64_elf_fpregset_t *)gregs);
-}
-
 /* Likewise, pack one or all floating point registers into an
    elf_fpregset_t.  */
 
@@ -539,8 +466,7 @@ mips64_fill_fpregset (const struct regcache *regcache,
 	}
       else
 	{
-	  to = (gdb_byte *) (*fpregsetp + regno
-			     - gdbarch_fp0_regnum (gdbarch));
+	  to = (gdb_byte *) (*fpregsetp + regno - gdbarch_fp0_regnum (gdbarch));
 	  regcache_raw_collect (regcache, regno, to);
 	}
     }
@@ -581,75 +507,72 @@ mips64_fill_fpregset (const struct regcache *regcache,
     }
 }
 
+
+/*  Use a local version of this function to get the correct types for
+    regsets, until multi-arch core support is ready.  */
+
 static void
-mips64_fill_fpregset_wrapper (const struct regset *regset,
-			      const struct regcache *regcache,
-			      int regnum, void *gregs, size_t len)
+fetch_core_registers (struct regcache *regcache,
+		      char *core_reg_sect, unsigned core_reg_size,
+		      int which, CORE_ADDR reg_addr)
 {
-  gdb_assert (len == sizeof (mips64_elf_fpregset_t));
-
-  mips64_fill_fpregset (regcache, (mips64_elf_fpregset_t *)gregs, regnum);
-}
-
-const struct regset *
-mips_linux_regset_from_core_section (struct gdbarch *gdbarch,
-			             const char *sect_name, size_t sect_size)
-{
-  struct gdbarch_tdep *tdep = gdbarch_tdep (gdbarch);
   mips_elf_gregset_t gregset;
   mips_elf_fpregset_t fpregset;
   mips64_elf_gregset_t gregset64;
   mips64_elf_fpregset_t fpregset64;
 
-  if (strcmp (sect_name, ".reg") == 0)
+  if (which == 0)
     {
-      if (sect_size == sizeof (gregset))
+      if (core_reg_size == sizeof (gregset))
 	{
-	  if (tdep->gregset == NULL)
-	    tdep->gregset = regset_alloc (gdbarch,
-                                          mips_supply_gregset_wrapper,
-				          mips_fill_gregset_wrapper);
-	  return tdep->gregset;
+	  memcpy ((char *) &gregset, core_reg_sect, sizeof (gregset));
+	  mips_supply_gregset (regcache,
+			       (const mips_elf_gregset_t *) &gregset);
 	}
-      else if (sect_size == sizeof (gregset64))
+      else if (core_reg_size == sizeof (gregset64))
 	{
-	  if (tdep->gregset64 == NULL)
-	    tdep->gregset64 = regset_alloc (gdbarch,
-                                            mips64_supply_gregset_wrapper,
-				            mips64_fill_gregset_wrapper);
-	  return tdep->gregset64;
+	  memcpy ((char *) &gregset64, core_reg_sect, sizeof (gregset64));
+	  mips64_supply_gregset (regcache,
+				 (const mips64_elf_gregset_t *) &gregset64);
 	}
       else
 	{
 	  warning (_("wrong size gregset struct in core file"));
 	}
     }
-  else if (strcmp (sect_name, ".reg2") == 0)
+  else if (which == 2)
     {
-      if (sect_size == sizeof (fpregset))
+      if (core_reg_size == sizeof (fpregset))
 	{
-	  if (tdep->fpregset == NULL)
-	    tdep->fpregset = regset_alloc (gdbarch,
-                                           mips_supply_fpregset_wrapper,
-				           mips_fill_fpregset_wrapper);
-	  return tdep->fpregset;
+	  memcpy ((char *) &fpregset, core_reg_sect, sizeof (fpregset));
+	  mips_supply_fpregset (regcache,
+				(const mips_elf_fpregset_t *) &fpregset);
 	}
-      else if (sect_size == sizeof (fpregset64))
+      else if (core_reg_size == sizeof (fpregset64))
 	{
-	  if (tdep->fpregset64 == NULL)
-	    tdep->fpregset64 = regset_alloc (gdbarch,
-                                             mips64_supply_fpregset_wrapper,
-				             mips64_fill_fpregset_wrapper);
-	  return tdep->fpregset64;
+	  memcpy ((char *) &fpregset64, core_reg_sect,
+		  sizeof (fpregset64));
+	  mips64_supply_fpregset (regcache,
+				  (const mips64_elf_fpregset_t *) &fpregset64);
 	}
       else
 	{
 	  warning (_("wrong size fpregset struct in core file"));
 	}
     }
-
-  return NULL;
 }
+
+/* Register that we are able to handle ELF file formats using standard
+   procfs "regset" structures.  */
+
+static struct core_fns regset_core_fns =
+{
+  bfd_target_elf_flavour,		/* core_flavour */
+  default_check_format,			/* check_format */
+  default_core_sniffer,			/* core_sniffer */
+  fetch_core_registers,			/* core_read_registers */
+  NULL					/* next */
+};
 
 static const struct target_desc *
 mips_linux_core_read_description (struct gdbarch *gdbarch,
@@ -1207,38 +1130,6 @@ mips_linux_syscall_next_pc (struct frame_info *frame)
   return pc + 4;
 }
 
-/* Return the current system call's number present in the
-   v0 register.  When the function fails, it returns -1.  */
-
-static LONGEST
-mips_linux_get_syscall_number (struct gdbarch *gdbarch,
-			       ptid_t ptid)
-{
-  struct regcache *regcache = get_thread_regcache (ptid);
-  struct gdbarch_tdep *tdep = gdbarch_tdep (gdbarch);
-  enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
-  int regsize = register_size (gdbarch, MIPS_V0_REGNUM);
-  /* The content of a register */
-  gdb_byte buf[8];
-  /* The result */
-  LONGEST ret;
-
-  /* Make sure we're in a known ABI */
-  gdb_assert (tdep->mips_abi == MIPS_ABI_O32
-	      || tdep->mips_abi == MIPS_ABI_N32
-	      || tdep->mips_abi == MIPS_ABI_N64);
-
-  gdb_assert (regsize <= sizeof (buf));
-
-  /* Getting the system call number from the register.
-     syscall number is in v0 or $2.  */
-  regcache_cooked_read (regcache, MIPS_V0_REGNUM, buf);
-
-  ret = extract_signed_integer (buf, regsize, byte_order);
-
-  return ret;
-}
-
 /* Initialize one of the GNU/Linux OS ABIs.  */
 
 static void
@@ -1249,11 +1140,6 @@ mips_linux_init_abi (struct gdbarch_info info,
   enum mips_abi abi = mips_abi (gdbarch);
   struct tdesc_arch_data *tdesc_data = (void *) info.tdep_info;
 
-  linux_init_abi (info, gdbarch);
-
-  /* Get the syscall number from the arch's register.  */
-  set_gdbarch_get_syscall_number (gdbarch, mips_linux_get_syscall_number);
-
   switch (abi)
     {
       case MIPS_ABI_O32:
@@ -1263,7 +1149,6 @@ mips_linux_init_abi (struct gdbarch_info info,
 	  (gdbarch, svr4_ilp32_fetch_link_map_offsets);
 	tramp_frame_prepend_unwinder (gdbarch, &mips_linux_o32_sigframe);
 	tramp_frame_prepend_unwinder (gdbarch, &mips_linux_o32_rt_sigframe);
-	set_xml_syscall_file_name ("syscalls/mips-o32-linux.xml");
 	break;
       case MIPS_ABI_N32:
 	set_gdbarch_get_longjmp_target (gdbarch,
@@ -1277,7 +1162,6 @@ mips_linux_init_abi (struct gdbarch_info info,
 	   does not distinguish between quiet and signalling NaNs).  */
 	set_gdbarch_long_double_format (gdbarch, floatformats_ia64_quad);
 	tramp_frame_prepend_unwinder (gdbarch, &mips_linux_n32_rt_sigframe);
-	set_xml_syscall_file_name ("syscalls/mips-n32-linux.xml");
 	break;
       case MIPS_ABI_N64:
 	set_gdbarch_get_longjmp_target (gdbarch,
@@ -1291,7 +1175,6 @@ mips_linux_init_abi (struct gdbarch_info info,
 	   does not distinguish between quiet and signalling NaNs).  */
 	set_gdbarch_long_double_format (gdbarch, floatformats_ia64_quad);
 	tramp_frame_prepend_unwinder (gdbarch, &mips_linux_n64_rt_sigframe);
-	set_xml_syscall_file_name ("syscalls/mips-n64-linux.xml");
 	break;
       default:
 	break;
@@ -1319,9 +1202,6 @@ mips_linux_init_abi (struct gdbarch_info info,
 
   set_gdbarch_core_read_description (gdbarch,
 				     mips_linux_core_read_description);
-
-  set_gdbarch_regset_from_core_section (gdbarch,
-					mips_linux_regset_from_core_section);
 
   tdep->syscall_next_pc = mips_linux_syscall_next_pc;
 
@@ -1360,4 +1240,6 @@ _initialize_mips_linux_tdep (void)
 			      GDB_OSABI_LINUX,
 			      mips_linux_init_abi);
     }
+
+  deprecated_add_core_fns (&regset_core_fns);
 }
